feat: add Swagger UI docs
